fix squished window controls

--- a/styles/Frame.module.css
+++ b/styles/Frame.module.css
@@ -48,7 +48,7 @@
   align-items: center;
   padding: 0 16px;
   grid-gap: 12px;
-  grid-template-columns: 45px 1fr 45px;
+  grid-template-columns: 48px 1fr 48px;
 }
 
 .controls {
